small edit of the short bio

--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -34,7 +34,7 @@ short_bio: >-
     <strong>Welcome to my website to learn a bit more on my research and teaching activities!</strong>
   </h5>
   <p>
-    Associate Professor in Physical Acoustics at Le Mans Université, I work on laser ultrasonics across MHz–THz frequencies for imaging and characterization of materials, including anisotropic, non-homogeneous, or polycrystalline ones, with applications extending to high-pressure studies in diamond anvil cells.
+    Associate Professor in Physical Acoustics at Le Mans Université, I work on laser ultrasonics across MHz–sub-THz frequencies for imaging and characterization of materials, including anisotropic, non-homogeneous, or polycrystalline ones, with applications extending to high-pressure studies in diamond anvil cells.
   </p>
 
 portrait_url: /assets/images/photos/portrait_sraetz.png
